# Python_HW

./: .coverage  .env.exeple  .gitignore  README.md  config.py  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_log_decorator_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: decorators.py  external_api.py  filters_data.py  generators.py  masks.py  mylog.txt  open_file_stat.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_external_api.py  test_generators.py  test_log_decorator.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
